force-app/main/default/objects/Questionnaire_Answer__c/Questionnaire_Answer__c.object-meta.xml
<CustomObject>
    <description>Custom object to record the responses to the questions completed as part of a Fraud, Error and Non-Compliance (FENC) assessment</description>
    <label>Questionnaire Answer</label>
    <nameField>
        <displayFormat>QAN-{00000}</displayFormat>
        <label>Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>