force-app/main/default/objects/Questionnaire_Answer__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <formula>FENC_Activity__r.Record_Type_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Type</label>
    <type>Text</type>
</CustomField>