force-app/main/default/objects/Questionnaire_Answer__c/fields/Category_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Category_Level_1__c</fullName>
    <description>Captures a question&apos;s category level 1. Comes from the Question Availability object. Stamped by a flow during the creation of the questionnaire.</description>
    <label>Category Level 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>