force-app/main/default/objects/Questionnaire_Answer__c/fields/Evidence_Detail__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Detail__c</fullName>
    <description>Details of evidence provided to support answer</description>
    <label>Evidence Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>