force-app/main/default/objects/Questionnaire_Answer__c/fields/Evidence_Provided__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Evidence is needed for this answer</description>
    <label>Evidence Provided</label>
    <type>Checkbox</type>
</CustomField>