force-app/main/default/objects/Questionnaire_Answer__c/fields/Question_Answer__c.field-meta.xml
<CustomField>
    <fullName>Question_Answer__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Response_Text__c)),
    Response_Text__c,

    IF(
        NOT(ISNULL(Response_Number__c)),
        TEXT(Response_Number__c),

        IF(
            NOT(ISNULL(Response_Currency__c)),
            TEXT(Response_Currency__c),

            IF(
                NOT(ISBLANK(Response_Date__c)),
                TEXT(Response_Date__c),
                &quot;No Answer&quot;
            )
        )
    )
)</formula>
    <label>Question Answer</label>
    <type>Text</type>
</CustomField>