force-app/main/default/objects/Questionnaire_Answer__c/fields/Question_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Data_Type__c</fullName>
    <formula>TEXT(Question_Definition__r.Question_Data_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Data Type</label>
    <type>Text</type>
</CustomField>