force-app/main/default/objects/Questionnaire_Answer__c/fields/Question_Definition__c.field-meta.xml
<CustomField>
    <fullName>Question_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Definition</label>
    <referenceTo>Question_Definition__c</referenceTo>
    <relationshipLabel>Questionnaire Answers</relationshipLabel>
    <relationshipName>Questionnaire_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>