force-app/main/default/objects/Questionnaire_Answer__c/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <formula>Question_Definition__r.Question_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Text</label>
    <type>Text</type>
</CustomField>