force-app/main/default/objects/Questionnaire_Answer__c/fields/Response_Currency__c.field-meta.xml
<CustomField>
    <fullName>Response_Currency__c</fullName>
    <label>Response Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>