force-app/main/default/objects/Questionnaire_Answer__c/fields/Response_Number__c.field-meta.xml
<CustomField>
    <fullName>Response_Number__c</fullName>
    <label>Response Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>