force-app/main/default/objects/Questionnaire_Answer__c/fields/Response_Text__c.field-meta.xml
<CustomField>
    <fullName>Response_Text__c</fullName>
    <label>Response Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>