force-app/main/default/objects/Questionnaire_Answer__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>Text field used to capture the question&apos;s related section. Comes from the Question Availability object. Stamped by a flow during the creation of the questionnaire.</description>
    <label>Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>