force-app/main/default/objects/Questionnaire_Answer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question_Number__c</columns>
    <columns>Question_Text__c</columns>
    <columns>Question_Definition__c</columns>
    <columns>Question_Answer__c</columns>
    <columns>Response_Text__c</columns>
    <columns>FENC_Activity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>